[package]
name = "webhook-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = "1.45.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
