[workspace]
resolver = "2"
members = [
    "server",
    "client",
]

[package]
name = "webhook-relay-workspace"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = "0.12"

[profile.release]
# Enable optimizations for size and speed
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization with single codegen unit
panic = "abort"          # Remove panic formatting code
strip = "symbols"        # Strip symbols automatically