[package]
name = "relayd"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
env_logger = "0.11.8"
eventsource-client = "0.15.0"
futures = "0.3.31"
log = "0.4.27"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand_core = "0.6.4"
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
